<resources>
    <string name="app_name">MiBaseDAtosP77B</string>
    <string name="crear_contacto">Crear Contacto</string>
    <string name="buscar">Buscar</string>
    <string name="ingrese_usuario">Ingrese Usuario...</string>
    <string name="ingrese_email">Ingrese Email...</string>
    <string name="ingrese_tel_fono">Ingrese Teléfono...</string>
    <string name="ingresa_fecha_de_nacimiento">Ingresa Fecha de Nacimiento...</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="actualizar">Actualizar</string>
</resources>
