<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="EditarContactoActivity">
    <EditText
        android:id="@+id/txtUsuarioEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/ingrese_usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtEmailEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/ingrese_email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtTelefonoEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/ingrese_tel_fono"
        android:inputType="phone" />

    <EditText
        android:id="@+id/txtFechaNacimientoEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/ingresa_fecha_de_nacimiento"
        android:inputType="date" />

    <Button
        android:id="@+id/btnActualizarEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/actualizar" />

    <Button
        android:id="@+id/btnCancelarEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancelar" />

</LinearLayout>